# ourdao-contracts

./: .gitignore  Cargo.toml  FRONTEND_INTEGRATION_ANALYSIS.md  Makefile  README.md  hardhat.config.ts  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/: DAOErrors.sol  IDAO.sol  UnifiedLendingDAO.sol
contracts/dao/: Cargo.toml
contracts/dao/src/: admin.rs  docs.rs  error.rs  lib.rs  loans.rs  membership.rs  privacy.rs  registry.rs  staking.rs  storage.rs  test.rs  treasury.rs  types.rs  util.rs
contracts/extensions/: ENSGovernance.sol  FilecoinStorage.sol
contracts/interfaces/: IENS.sol  IFHE.sol  IFilecoin.sol  ISymbioticIntegration.sol
contracts/mocks/: MockSymbioticCore.sol
docs/: CONTRACTS_GUIDE.md
ignition/modules/: LendingDAO.ts
scripts/: configure-advanced-features.ts  configure-unified-dao.ts  deploy-testnet.sh  deploy-unified-dao.ts  ens-governance-example.ts  example-advanced-usage.ts  filecoin-example.ts
test/: AdvancedIntegrations.test.ts  ENSGovernance.test.ts  FilecoinIntegration.test.js  FilecoinSimple.test.js  FilecoinStorage.test.ts  UnifiedLendingDAO.test.ts
