[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ourdao/ourdao-contracts"

[workspace.dependencies]
soroban-sdk = "26.1.0"

# Release profile tuned for small, deterministic Soroban wasm.
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
